tests/type_errors/string_where_bool_expected.nos
# expect_error: expected `Bool`
# Test: passing String where Bool is expected

toggle(flag: Bool) = if flag then false else true

main() = toggle("yes")
